--- a/KGERP/Views/BillRequisition/PMBRApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApprovalList.cshtml
@@ -87,8 +87,9 @@
                                         <th>Date</th>
                                         <th>Requisition No</th>
                                         <th>Requisition Type</th>
-                                        <th>Project Type</th>
-                                        <th>Project</th>
+                                        <th>Requisition Subtype</th>
+                                        @*<th>Project Type</th>*@
+                                        <th>Project Name</th>
                                         <th>Status</th>
                                         <th>Action</th>
                                         <th>Report</th>
@@ -117,7 +118,7 @@
                                             <td>@item.BRDate.ToString("dd-MM-yyyy")</td>
                                             <td>@item.BillRequisitionNo</td>
                                             <td>@item.BRTypeName</td>
-                                            <td>@item.ProjectTypeName</td>
+                                            <td>@item.BRSubtypeName</td>
                                             <td>@item.CostCenterName</td>
 
                                             <td>
